# tg-userbot

./: .env.example  pyproject.toml
src/: __main__.py  consts.py  container.py  logging.py  settings.py  types.py
src/bot/: __init__.py
src/bot/plugins/base/: __init__.py  ping.py  repeat.py
src/bot/utils/: send_message.py  tasks.py
src/bot/utils/user_storage/: __init__.py  base.py
